# sample-ndk-android

./: settings.gradle.kts
app/: build.gradle.kts
app/libs/: libwolfssl.so.35
app/src/androidTest/java/com/example/osaclient/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  osaclient.cpp
app/src/main/java/com/example/osaclient/: MainActivity.kt
app/src/main/java/com/example/osaclient/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/osaclient/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
